# AutoWorkOnGit

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  SETUP_GUIDE.md  pyproject.toml
.claude/agents/: requirements-collector.md
config/: config.yaml  config.yaml.example
docs/: AUTO_CREATE_FEATURE.md  AUTO_CREATE_IMPLEMENTATION.md  PROJECT_STATUS.md  api.md  architecture.md  auto_create_repo.md  configuration.md  examples.md  quickstart.md  setup-summary.md
docs/workflow_runs/: run-20260326-121908-44f45050.json
scripts/: check_setup.py  setup_github.py  test_auto_create.py  test_token.py  validate_config.py
src/python_project/: __init__.py  __main__.py  main.py
src/python_project/agents/: base.py  pr_reviewer.py  requirements_collector.py  task_analyzer.py
src/python_project/core/: claude_executor.py  config.py  github_client.py
src/python_project/workflows/: orchestrator.py
tests/: conftest.py  test_main.py
